# routes/urls.go
@@ -28,5 +28,7 @@ func Urls(ng *gin.Engine) {
 		v1.Any("/buckets/", ctls.NewBucketController().Init().Dispatch)
 		v1.Any("/buckets/:id/", ctls.NewBucketDetailController().Init().Dispatch)
 		v1.Any("/dir/:bucketname/*dirpath", ctls.NewDirController().Init().Dispatch)
+		v1.Any("/metadata/:bucketname/*path", ctls.NewMetadataController().Init().Dispatch)
+		v1.Any("/move/:bucketname/*objpath", ctls.NewMoveController().Init().Dispatch)
 	}
 }
